# zaino

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  zcash.conf  zebrad.toml
.github/workflows/: ci.yml
integration-tests/: Cargo.toml
integration-tests/tests/: e2e.rs  integrations.rs
n-proxy/: Cargo.toml
n-proxy/src/: lib.rs  nproxy.rs  nserver.rs
nym-proxy/: Cargo.toml
nym-proxy/src/: lib.rs  proxy.rs  server.rs  utils.rs
src/: lib.rs  main.rs  net_utils.rs  nproxy.rs  nproxy_utils.rs  nserver.rs  nym.rs  nym_utils.rs  proxy.rs  zingo_utils.rs  zproxy.rs  zproxy_utils.rs
z-proxy/: Cargo.toml
z-proxy/src/: lib.rs  server.rs
zaino-fetch/: Cargo.toml
zaino-fetch/src/: chain.rs  jsonrpc.rs  lib.rs  primitives.rs
zaino-fetch/src/chain/: block.rs  mempool.rs  transaction.rs  utils.rs
zaino-fetch/src/jsonrpc/: connector.rs  error.rs  response.rs
zaino-fetch/src/primitives/: address.rs  block.rs  chain.rs  height.rs  transaction.rs
zaino-nym/: Cargo.toml
zaino-nym/src/: client.rs  error.rs  lib.rs  utils.rs
zaino-proto/: Cargo.toml  build.rs.bak
zaino-proto/src/: lib.rs  proto.rs
zaino-serve/: Cargo.toml  build.rs
zaino-serve/src/: lib.rs  rpc.rs  server.rs  utils.rs
zaino-serve/src/rpc/: nymservice.rs  nymwalletservice.rs  service.rs
zaino-serve/src/server/: director.rs  error.rs  ingestor.rs  queue.rs  request.rs  worker.rs
zaino-state/: Cargo.toml
zaino-state/src/: lib.rs
zaino-testutils/: Cargo.toml
zaino-testutils/src/: lib.rs
zaino-wallet/: Cargo.toml
zaino-wallet/src/: lib.rs  service.rs  utils.rs
zainod/: Cargo.toml  zindexer.toml
zainod/src/: config.rs  error.rs  indexer.rs  lib.rs
zingo-indexerd/: Cargo.toml  zindexer.toml
zingo-indexerd/src/: config.rs  error.rs  indexer.rs  lib.rs  nym_server.rs  server.rs
zingo-nymd/: Cargo.toml
zingo-nymd/src/: lib.rs  proxy.rs  server.rs
zingo-nymserverd/: Cargo.toml
zingo-nymwalletd/: Cargo.toml  zcash.conf
zingo-nymwalletd/src/: lib.rs
zingo-proxyd/: Cargo.toml
zingo-proxyd/src/: config.rs  error.rs  grpc.rs  indexer.rs  lib.rs  nym_server.rs  proxy.rs  server.rs
zingo-rpc/: Cargo.toml  build.rs
zingo-rpc/proto/: compact_formats.proto  service.proto
zingo-rpc/src/: blockcache.rs  jsonrpc.rs  lib.rs  nym.rs  primitives.rs  proto.rs  queue.rs  rpc.rs  server.rs  service.rs  utils.rs  walletrpc.rs
zingo-rpc/src/blockcache/: block.rs  error.rs  mempool.rs  transaction.rs  utils.rs
zingo-rpc/src/jsonrpc/: connector.rs  error.rs  primitives.rs  response.rs
zingo-rpc/src/nym/: client.rs  error.rs  utils.rs
zingo-rpc/src/primitives/: address.rs  block.rs  chain.rs  client.rs  error.rs  height.rs  transaction.rs
zingo-rpc/src/proto/: cash.z.wallet.sdk.rpc.rs  darkside.rs  service.rs
zingo-rpc/src/queue/: error.rs  ingestor.rs  request.rs  requests.rs  worker.rs
zingo-rpc/src/rpc/: darkside.rs  nymservice.rs  nymwalletservice.rs  service.rs
zingo-rpc/src/server/: dispatcher.rs  error.rs  ingestor.rs  queue.rs  request.rs  worker.rs  workerpool.rs
zingo-rpc/src/walletrpc/: grpc.rs  service.rs  utils.rs
zingo-testutils/: Cargo.toml  zcash.conf  zebrad.toml
zingo-testutils/src/: lib.rs
zingo-testutils/test_binaries/bins/: lightwalletd  zcash-cli  zcashd
zingoindexer-testutils/: Cargo.toml
zingoindexer-testutils/src/: lib.rs
zingoproxy-testutils/: Cargo.toml
zingoproxy-testutils/src/: lib.rs
