# Workspace Members are in dependency order, do not change this without prior consideration.
[workspace]
members = [
    "integration-tests",
    "zaino-testutils",
    "zainod",
    "zaino-serve",
    "zaino-wallet",
    "zaino-nym",
    "zaino-state",
    "zaino-fetch",
    "zaino-proto",
]

# Use the edition 2021 dependency resolver in the workspace, to match the crates
resolver = "2"

[workspace.package]
authors = ["Zingo Lab Cyan"]
repository = "https://github.com/zingolabs"
homepage = "https://www.zingolabs.org/"
edition = "2021"
license = "Apache-2.0"


[workspace.dependencies]
# NymSdk
nym-sdk = { git = "https://github.com/nymtech/nym", branch = "master" }
nym-sphinx-addressing = { git = "https://github.com/nymtech/nym", branch = "master" }
nym-bin-common = { git = "https://github.com/nymtech/nym", branch = "master" }
nym-sphinx-anonymous-replies = { git = "https://github.com/nymtech/nym", branch = "master" }
# nym-sdk = { git = "https://github.com/idky137/nym", branch = "zaino_dep_fix" }
# nym-sphinx-addressing = { git = "https://github.com/idky137/nym", branch = "zaino_dep_fix" }
# nym-bin-common = { git = "https://github.com/idky137/nym", branch = "zaino_dep_fix" }
# nym-sphinx-anonymous-replies = { git = "https://github.com/idky137/nym", branch = "zaino_dep_fix" }

# Miscellaneous
tokio = { version = "1.37.0", features = ["full"] } # { version = "1.38", features = ["full"] }
tonic = "0.10.2" # "0.12"
http = "0.2.4" # "1.1"
thiserror = "1.0.59" # "1.0"

