# Workspace Members are in dependency order, do not change this without prior consideration.
[workspace]
members = [
    "integration-tests",
    "zaino-testutils",
    "zainod",
    "zaino-serve",
    # "zaino-wallet",
    # "zaino-nym",
    "zaino-state",
    "zaino-fetch",
    "zaino-proto",
]

# Use the edition 2021 dependency resolver in the workspace, to match the crates
resolver = "2"

[workspace.package]
authors = ["Zingo Lab Cyan"]
repository = "https://github.com/zingolabs"
homepage = "https://www.zingolabs.org/"
edition = "2021"
license = "Apache-2.0"


[workspace.dependencies]
# Zingolabs
#
# NOTE: This may have to move to Zaino-testutils once Nym code is reintroduced and Zaino-Wallet becomes a dependency of zingolib.
zingolib = { git = "https://github.com/zingolabs/zingolib.git", tag = "zaino_dep_002_091024_95e5b0d8f9d5ee0485c6141533da2f727aeafae2", features = ["zaino-test"] }

# Librustzcash
zcash_protocol = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.11.2_plus_zingolabs_changes-1-g7ad60b5d5-2-g121371a08" }

# Zebra
zebra-chain = { git = "https://github.com/idky137/zebra.git", branch = "zaino_dep_changes" }
zebra-rpc = { git = "https://github.com/idky137/zebra.git", branch = "zaino_dep_changes" }

# Temporarily removed until dependency conflict can be resolved.
# Nym
# nym-sdk = { git = "https://github.com/nymtech/nym", branch = "master" }
# nym-sphinx-addressing = { git = "https://github.com/nymtech/nym", branch = "master" }
# nym-bin-common = { git = "https://github.com/nymtech/nym", branch = "master" }
# nym-sphinx-anonymous-replies = { git = "https://github.com/nymtech/nym", branch = "master" }

# Miscellaneous
tokio = { version = "1.38", features = ["full"] }
tonic = "0.12"
http = "1.1"
thiserror = "1.0"

