[package]
name = "integration-tests"
version = "0.1.0"
description = "Crate containing Zingo-Indexer 'Wallet-to-Node' tests."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }


[features]
# NOTE: Deprecated
nym_poc = []

[dependencies]
zingoindexer-testutils = { path = "../zingoindexer-testutils" }

# Miscellaneous Workspace
tokio = { workspace = true }
