[package]
name = "integration-tests"
version = "0.1.0"
description = "Crate containing Zaino 'Wallet-to-Node' tests."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }


[features]
# NOTE: Deprecated
nym_poc = []

[dependencies]
zaino-testutils = { path = "../zaino-testutils" }
zingolib = { workspace = true }

# Miscellaneous Workspace
tokio = { workspace = true }
