[package]
name = "zaino-fetch"
version = "0.1.0"
description = "A mempool-fetching, chain-fetching and transaction submission service that uses zebra's RPC interface."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
# NOTE: Deprecated
nym_poc = ["zingo-netutils", "zcash_client_backend"]

[dependencies]
# Zinglib and LibRustZcash:
#
# Only used in original nym_poc code, to be removed with creation of nym enhanced zingolib build. 
#
# Not to be used in production code as zingo-rpc will become a dep of zingolib and zingo-indexer now builds its onw CompactTxStreamer.
zingo-netutils = { git = "https://github.com/zingolabs/zingolib.git", branch = "nym_integration", optional = true }
zcash_client_backend = { git = "https://github.com/zingolabs/librustzcash.git", branch = "nym_integration", features = ["lightwalletd-tonic"], optional = true }

zaino-proto = { path = "../zaino-proto" }

# NymSdk
nym-sdk = { workspace = true }
nym-sphinx-addressing = { workspace = true }
nym-sphinx-anonymous-replies = { workspace = true }

# Miscellaneous Workspace
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }

# Miscellaneous Crate
prost = "0.12" # "0.13.1"
bytes = "1.1" # "1.6.1"
http-body = "0.4.4" # "1.0.1"
tower = { version = "0.4.13" }
hyper = { version = "0.14.28", features = ["full"] } # { version = "1.4.1", features = ["full"] }
serde_json = { version = "1.0.117", features = ["preserve_order"] } # { version = "1.0.120", features = ["preserve_order"] } # The preserve_order feature in serde_jsonn is a dependency of jsonrpc-core
serde = { version = "1.0.201", features = ["derive"] } # { version = "1.0.204", features = ["derive"] }
hyper-tls = "0.5" # "0.6"
hex = { version = "0.4.3", features = ["serde"] }
indexmap = { version = "2.2.6", features = ["serde"] }
base64 = "0.13.0" # "0.22.1"
tokio-stream = "0.1" # "0.1.15"
futures = "0.3.30"
byteorder = "1" # "1.5"
sha2 = "0.10" # "0.10.8"
async-stream = "0.3" # "0.3.5"
crossbeam-channel = "0.5"

[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] } # "0.12"
which = "4"
whoami = "1.0" # "1.5"
