[package]
name = "zaino-fetch"
version = "0.1.0"
description = "A mempool-fetching, chain-fetching and transaction submission service that uses zebra's RPC interface."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
zaino-proto = { path = "../zaino-proto" }

# Librustzcash
zcash_protocol = { workspace = true }

# Zebra
zebra-chain = { workspace = true }
zebra-rpc = { workspace = true }

# Miscellaneous Workspace
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }

# Miscellaneous Crate
prost = "0.13"
reqwest = "0.12"
url = "2.5"
serde_json = { version = "1.0", features = ["preserve_order"] } # The preserve_order feature in serde_jsonn is a dependency of jsonrpc-core
serde = { version = "1.0", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
indexmap = { version = "2.2.6", features = ["serde"] }
base64 = "0.22"
byteorder = "1.5"
sha2 = "0.10"

