[package]
name = "zaino-proto"
version = "0.1.0"
description = "Holds tonic files and build logic for the lightwallet and darkside RPCs."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# Miscellaneous Workspace
tonic = { workspace = true }

# Miscellaneous Crate
prost = "0.13"

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }
which = "4"
