[package]
name = "zaino-testutils"
version = "0.1.0"
description = "Crate containing Zaino test specific functionality."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
# NOTE: Deprecated
nym_poc = []

[dependencies]
zaino-fetch = { path = "../zaino-fetch" }
zainod = { path = "../zainod" }

# ZingoLib
zingolib = { git = "https://github.com/zingolabs/zingolib.git", tag = "zaino_dep_002_091024_95e5b0d8f9d5ee0485c6141533da2f727aeafae2", features = ["zaino-test"] }
# zingolib = { git = "https://github.com/idky137/zingolib.git", branch = "zaino_temp_dep", features = ["zaino-test"] }
# zingolib = { path = "../../zingolib/zingolib", features = ["zaino-test"] }


# Miscellaneous Workspace
tokio = { workspace = true }
tonic = { workspace = true }
http = { workspace = true }

# Miscellaneous Crate
ctrlc = "3.2"
tempfile = "3.2"
portpicker = "0.1"
