[package]
name = "zainod"
version = "0.1.0"
description = "Crate containing the Zaino Indexer binary."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "zainod"
path = "src/bin/zainod.rs"

[lib]
name = "zainodlib"
path = "src/lib.rs"

[features]
# NOTE: Deprecated
nym_poc = ["zingo-netutils", "zcash_client_backend"]

[dependencies]
# Zinglib and LibRustZcash:
#
# Only used in original nym_poc code, to be removed with creation of nym enhanced zingolib build. 
#
# Not to be used in production code as zingo-rpc will become a dep of zingolib and zingo-indexer now builds its onw CompactTxStreamer.
zingo-netutils = { git = "https://github.com/zingolabs/zingolib.git", branch = "nym_integration", optional = true }
zcash_client_backend = { git = "https://github.com/zingolabs/librustzcash.git", branch = "nym_integration", features = ["lightwalletd-tonic"], optional = true }

zaino-fetch = { path = "../zaino-fetch" }
zaino-serve = { path = "../zaino-serve" }

# NymSdk
nym-sdk = { workspace = true }
nym-bin-common = { workspace = true }
nym-sphinx-anonymous-replies = { workspace = true }

# Miscellaneous Workspace
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }

# Miscellaneous Crate
tower = { version = "0.4.13" }
hyper = { version = "0.14.28", features = ["full"] } # { version = "1.4.1", features = ["full"] }
serde = { version = "1.0.201", features = ["derive"] } # { version = "1.0.204", features = ["derive"] }
ctrlc = "3.2.1" # "3.4.4"
toml = "0.5"
clap = { version = "4.0", features = ["derive"] }
