[package]
name = "zainod"
version = "0.1.0"
description = "Crate containing the Zaino Indexer binary."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "zainod"
path = "src/bin/zainod.rs"

[lib]
name = "zainodlib"
path = "src/lib.rs"

[features]
# NOTE: Deprecated
nym_poc = []

[dependencies]
zaino-fetch = { path = "../zaino-fetch" }
zaino-serve = { path = "../zaino-serve" }

# NymSdk
nym-bin-common = { workspace = true }

# Miscellaneous Workspace
tokio = { workspace = true, features = ["full"] }
http = { workspace = true }
thiserror = { workspace = true }

# Miscellaneous Crate
serde = { version = "1.0.201", features = ["derive"] } # { version = "1.0", features = ["derive"] }
ctrlc = "3.2.1" # "3.4"
toml = "0.5"
clap = { version = "4.0", features = ["derive"] }
