[package]
name = "zingo-proxyd"
version = "0.1.0"
description = "Crate containing the Zingo-Proxy LightWallet server binary."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "zingoproxyd"
path = "src/bin/zingoproxyd.rs"

[lib]
name = "zingoproxylib"
path = "src/lib.rs"

[features]
# NOTE: Deprecated
nym_poc = []

[dependencies]
zingo-rpc = { path = "../zingo-rpc" }

# ZingoLib
zingo-netutils = { workspace = true }

# LibRustZcash
zcash_client_backend = { workspace = true, features = ["lightwalletd-tonic"] }

# NymSdk
nym-sdk = { workspace = true }
nym-sphinx-addressing = { workspace = true }
nym-validator-client = { workspace = true }
nym-bin-common = { workspace = true }
nym-sphinx-anonymous-replies = { workspace = true }

# Miscellaneous Workspace
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true, features = ["full"] }
hyper-rustls = { workspace = true, features = ["http2"] }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }

# Miscellaneous Crate
ctrlc = "3.2.1" # "3.4.4"
tokio-socks = "0.5" # "0.5.1"
webpki-roots = "0.21.0" # "0.26.3"
