[package]
name = "zingo-proxyd"
version = "0.1.0"
description = "Crate containing the Zingo-Proxy LightWallet server binary."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "zingoproxyd"
path = "src/bin/zingoproxyd.rs"

[lib]
name = "zingoproxylib"
path = "src/lib.rs"

[features]
# NOTE: Deprecated
nym_poc = []

[dependencies]
zingo-rpc = { path = "../zingo-rpc" }

# NymSdk
nym-sdk = { workspace = true }
nym-bin-common = { workspace = true }
nym-sphinx-anonymous-replies = { workspace = true }

# Miscellaneous Workspace
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
http = { workspace = true }

# Miscellaneous Crate
ctrlc = "3.2.1" # "3.4.4"
