[package]
name = "zingo-rpc"
version = "0.1.0"
description = "Crate containing the Zingo-Proxy LightWallet server library."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
# NOTE: Deprecated
nym_poc = []

[dependencies]
# LibRustZcash
zcash_client_backend = { workspace = true, features = ["lightwalletd-tonic"] }

# NymSdk
nym-sdk = { workspace = true }
nym-sphinx-addressing = { workspace = true }
nym-sphinx-anonymous-replies = { workspace = true }

# ZebraD
zebra-rpc = { git = "https://github.com/ZcashFoundation/zebra.git" }
zebra-chain = { git = "https://github.com/ZcashFoundation/zebra.git" }
zebra-state = { git = "https://github.com/ZcashFoundation/zebra.git" }
# zebra-rpc = { git = "https://github.com/ZcashFoundation/zebra.git", tag = "v1.8.0" }
# zebra-chain = { git = "https://github.com/ZcashFoundation/zebra.git", tag = "v1.8.0" }
# zebra-state = { git = "https://github.com/ZcashFoundation/zebra.git", tag = "v1.8.0" }

# Miscellaneous Workspace
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }

# Miscellaneous Crate
prost = "0.12" # "0.13.1"
bytes = "1.1" # "1.6.1"
http-body = "0.4.4" # "1.0.1"
tower = { version = "0.4.13" }
hyper = { version = "0.14.28", features = ["full"] } # { version = "1.4.1", features = ["full"] }
serde_json = { version = "1.0.117", features = ["preserve_order"] } # { version = "1.0.120", features = ["preserve_order"] } # The preserve_order feature in serde_jsonn is a dependency of jsonrpc-core
serde = { version = "1.0.201", features = ["derive"] } # { version = "1.0.204", features = ["derive"] }
hyper-tls = "0.5" # "0.6"
hex = { version = "0.4.3", features = ["serde"] }
indexmap = { version = "2.2.6", features = ["serde"] }
base64 = "0.13.0" # "0.22.1"
tokio-stream = "0.1" # "0.1.15"
futures = "0.3.30"
byteorder = "1" # "1.5"
sha2 = "0.10" # "0.10.8"
